feat: batch 7 delta and verification backfill - 8 new, 224 total, every file now verified