@@ -44,14 +44,12 @@ app {
 
 **The nesting level is part of the key, and the per-OS sections are not a free-for-all.** URL-scheme
 registration binds on the *app-level* config object; the per-OS objects expose no such key. Writing
-`mac.url-schemes` / `windows.url-schemes` / `linux.url-schemes` parses fine and does nothing — the
-shipped installers then register **no scheme at all**, on any platform. Nothing surfaces that — the
-format is silent — so the misplacement simply persists; in the case this was mined from it sat inert
-from the release that first carried the key until the key was moved. Per-OS sections do own genuinely
-per-OS keys (the plist entry, the start-menu group and the desktop-file group above are all real),
-which is exactly why the wrong placement looks plausible; the config's own comments are usually the
-only in-repo record of which key belongs where. The way to tell them apart is not intuition: build
-one machine and read the generated metadata (below).
+`mac.url-schemes` / `windows.url-schemes` / `linux.url-schemes` parses fine and registers **no scheme
+at all**, on any platform — silently, so the misplacement persists; in the case this was mined from
+it sat inert from the release that first carried the key until moved. Per-OS sections do own genuinely
+per-OS keys (the plist entry, the start-menu group, the desktop-file group above), which is exactly
+why the wrong placement looks plausible. Tell them apart by building one machine and reading the
+generated metadata below, not by intuition.
 
 **A nested group's fields must be *inside* the group.** Desktop-entry keys written as
 `desktop-file.Categories` land beside the `"Desktop Entry"` group instead of in it, so they never
@@ -85,13 +83,37 @@ config carries an `include` of a JDK definition matching the toolchain the plugi
 toolchain explicitly in the desktop module, and set the CI runner's JDK to the same major version —
 otherwise you package a runtime you never tested against.
 
+**The generated launcher packs its own arguments into a fixed-size buffer, and a full one fails the
+build, loudly, not silently.** Every `jvm.options` entry plus the classpath and other "constant app
+arguments" the packager computes are packed together into one buffer inside the launcher it
+generates — reported as 16384 bytes in this project's own config comment recording the incident;
+treat the number as version-specific and read whatever your own build prints instead of trusting it.
+This is the opposite failure mode from the rest of this skill: nothing here is ignored, the build
+simply refuses to finish, with a message naming neither a byte count nor the buffer — quoted from
+that same comment: `Your JVM arguments and constant app arguments together are too large`. A
+dependency that ships several per-platform jars can push the classpath alone close enough to the
+limit that *any* added option is what finally tips it over — the options themselves are rarely the
+real growth. Cut the ones with no functional behavior riding on them first: three flags here existed
+only to trim idle heap back to the OS, with nothing in the app depending on them, unlike the
+`--add-opens` module opens a few lines up, which reflection at runtime genuinely needs — `-Xmx512m`
+itself is only a footprint cap, per that same comment, so losing the trio costs a higher idle RSS and
+nothing else. Leave the removed lines in a comment, with the reason — the next person adding an
+option here needs to know the margin is already thin:
+
+```hocon
+// adapted — own summary of a longer in-file comment; the three removed lines are verbatim
+// removed to fit under the launcher's argument buffer, NOT because they stopped being right:
+// options += "-XX:MinHeapFreeRatio=20"
+// options += "-XX:MaxHeapFreeRatio=40"
+// options += "-XX:G1PeriodicGCInterval=60000"
+```
+
 **Declaring an environment block on macOS pins `PATH` to the bare system directories**
-(`/usr/bin:/bin:/usr/sbin:/sbin`), because the launch services layer applies the block instead of
-inheriting the user's environment. Before adding one for an allocator or locale setting, audit every
-place the app spawns a subprocess; anything resolved by bare name outside those four directories
-stops being found, and only when launched from the desktop — running the binary from a shell still
-works, which makes it look intermittent. The same block is also not applied at all for a direct
-shell launch, so a setting you rely on is absent in exactly the configuration you debug in.
+(`/usr/bin:/bin:/usr/sbin:/sbin`), because the launch services layer applies it instead of inheriting
+the user's environment. Before adding one for an allocator or locale setting, audit every place the
+app spawns a subprocess: anything resolved by bare name outside those four directories stops being
+found, and only when launched from the desktop — the same block never applies to a direct shell
+launch, so it looks intermittent and is absent in exactly the configuration you debug in.
 
 **Every scheme, association and category you declare here must also survive the layers after the
 packager.** If you re-wrap the packager's output (a directory tree into a single-file portable
